--- a/portfolio/pom.xml
+++ b/portfolio/pom.xml
@@ -20,6 +20,14 @@
   </properties>
 
   <dependencies>
+
+    <!-- Gson -->
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.8.6</version>
+    </dependency>
+
     <!-- Java Servlets API -->
     <dependency>
       <groupId>javax.servlet</groupId>
